--- a/Mathe_1.tex
+++ b/Mathe_1.tex
@@ -273,6 +273,35 @@ Unter http://oeis.org/ kann man die ersten Loesungen fuer kleine Probleminstanze
 
 \end{frame}
 
+\begin{frame}{Aufgabe - Mauerbau}
+\begin{itemize}
+\item Baue eine Mauer aus bestimmten Ziegeln.
+\item jeder Ziegel ist 2 Einheiten breit und 1 Einheit hoch und kann beliebig gedreht werden.
+\item jede Mauer is 2 Einheiten hoch und \(m\) Einheiten breit (\(0<m<=50\)). 
+\item Aufgabe: Wie viele Baumöglichkeiten?
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}{Fibonacci}
+\begin{block}{Definition:}
+	\(f(0)=0\)\\
+	\(f(1)=1\)\\
+ 	\(n>1: f(n)=f(n-1)+f(n-2)\)\\
+\end{block}
+Also: \(0, 1, 1, 2, 3, 4, 8, 13, 21, 34, 55, 89...\)\\
+
+Sollte man erkennen!
+\end{frame}
+
+
+\begin{frame}{Fibonacci - Implementierung}
+Mit DP in O(n)\\
+Binet's Formel\\ //TODO: soll die hier rein? testcase schreiben ab wann zu ungenau
+Alternativ: vorberechnen wärend andere Aufgaben gelöst werden.
+
+\end{frame}
+
 \section{Section 1}
 \subsection{Subsection 1.1}
 \begin{frame}{Example slide A}
