--- a/Mathe_1.tex
+++ b/Mathe_1.tex
@@ -273,6 +273,121 @@ Unter http://oeis.org/ kann man die ersten Loesungen fuer kleine Probleminstanze
 
 \end{frame}
 
+
+\section{Spieltheorie}
+\begin{frame}{Spieltheorie allgemein}
+\begin{itemize}
+\item Nullsummenspiel
+\pause
+\item Genau ein Gewinner
+\pause
+\item Alle spielen perfekt
+\pause
+\item Gibt es eine Gewinnstrategie?
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Beispielspiel}
+\begin{itemize}
+\item sechs M"unzen, zwei Spieler
+\pause
+\item immer abwechselnd maximal drei M"unzen nehmen
+\pause
+\item Wer die letzte M"unze nimmt, gewinnt
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Spielbaum}
+\begin{itemize}
+\item Knoten: aktueller Spieler und Spielsituation
+\pause
+\item Kanten: legale Spielz"uge
+\pause
+\item Wurzel: Spielsituation beim Start
+\pause
+\item Bl"atter: Geben Bewertung (-1 oder 1) an
+\pause
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Min-Max-Strategie}
+\begin{itemize}
+\item Min-Max-Strategie: Gewinn mit gr"o"stem Unterschied
+\begin{equation}
+   minmax(s,k) =
+   \begin{cases}
+     k.Bewertung & \text{für k Blatt-Knoten} \\
+     min\left\{minmax(k') | k' Kindknoten\right\} & \text{falls s = min} \\
+     max\left\{minmax(k') | k' Kindknoten\right\} & \text{falls s = max} \\
+   \end{cases}
+\end{equation}
+\pause
+\item Spieler-IDs k"onnen auch weggelassen werden: 
+\begin{equation}
+   minmax(k) =
+   \begin{cases}
+     k.Bewertung & \text{f"ur k Blatt-Knoten} \\
+     - min\left\{minmax(k') | k' Kindknoten\right\} & \text{sonst} \\
+   \end{cases}
+\end{equation}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Implementierung}
+\begin{itemize}
+\item wie gewohnt als Baum
+\lstinputlisting[language=c++]{minmax1.cpp}
+\pause
+\item Spieler-IDs k"onnen weggelassen werden
+\lstinputlisting[language=c++]{minmax2.cpp}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{manchmal Optimierung}
+\begin{itemize}
+\item Beispiel: Zahlen abwechselnd mit 2-9 multiplizieren
+\pause
+\item erster "uber n (Grenze) gewinnt
+\pause
+\item je acht Kinder: Viel zu viel
+\pause
+\item optimal: Immer abwechselnd 9 und 2
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Nim-Spiel}
+\begin{itemize}
+\item mehrere Haufen mit Objekten
+\pause
+\item zwei Spieler nehmen abwechselnd von einem Haufen
+\pause
+\item Wer das letzte Objekt nimmt, gewinnt
+\pause
+\item F"ur ein oder zwei Haufen mit Baum m"oglich 
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Nim-Spiel: Optimalstrategie}
+\begin{itemize}
+\item Anzahl Objekte in Haufen bin"ar mit xor verkn"upfen
+\pause
+\item Summe auf Null bringen, um zu gewinnen
+\pause
+\item Immer m"oglich
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Grundy-Zahlen}
+\begin{itemize}
+\item Theorem von Sprague-Grundy: Jedes neutrale Spiel "aquivalent zu Standard-Nim-Spiel
+\pause
+\item Grundy-Zahlen: kleinste Zahl, die nicht Grundy-Zahl von Nachfolgerstellung ist
+\pause
+\item Gewinnstrategie: Grundy-Zahl m"oglichst immer auf 0 bringen
+\end{itemize}
+\end{frame}
+
+
 \section{Section 1}
 \subsection{Subsection 1.1}
 \begin{frame}{Example slide A}
