changed some small stuff

--- a/Mathe_1.tex
+++ b/Mathe_1.tex
@@ -298,7 +298,8 @@ Sollte man erkennen!
 \begin{frame}{Fibonacci - Implementierung}
 Mit DP in O(n)\\
 Binet's Formel\\ //TODO: soll die hier rein? testcase schreiben ab wann zu ungenau
-Alternativ: vorberechnen wärend andere Aufgaben gelöst werden.
+Alternativ: vorberechnen wärend andere Aufgaben gelöst werden.\\
+Achtung: Wird sehr schnell sehr groß.
 
 \end{frame}
 
