Some tiny changes

--- a/Mathe_1.tex
+++ b/Mathe_1.tex
@@ -142,12 +142,14 @@ Beobachtung:
 
 \begin{frame} {Exponentiation by squaring, iterative Implementierung}
 \lstinputlisting[language=c++, basicstyle=\tiny]{iterExpSq.cpp}
-Da Multiplikation konstant viel Zeit ben"otigt, liegt die Exponentiation$\mathcal{O}(log(n))$
 \end{frame}
 
-
-\begin{frame}{Hier kommt ein kleines Beispiel auf dem Tafel}
+\begin{frame} {Exponentiation by squaring, Laufzeit}
+Da Multiplikation konstant viel Zeit ben"otigt, liegt die Exponentiation in $\mathcal{O}(log(n))$
 \end{frame}
+
+%%\begin{frame}{Hier kommt ein kleines Beispiel auf dem Tafel}
+%%\end{frame}
 
 \section{Kombinatorik}
 
