--- a/Mathe_1.tex
+++ b/Mathe_1.tex
@@ -212,7 +212,7 @@ Gegeben die Anzahl an Faktoren, wie viele verschiedene Wege gibt es diese zu kla
 Beispiel:
 \begin{itemize}
 \item Gegeben: $\lbrace a, b, c, d \rbrace$
-\item Gesucht: Moeglichkeiten fuer Klammerung
+\item Gesucht: M"oglichkeiten f"ur Klammerung
 \item $ a \left( b \left( c d \right) \right) $ , $\left( a b \right) \left( c d \right) $ , $\left( \left( a b \right) c \right) d$ , $\left( a \left( b  c \right) \right) d $ , $ a \left( \left( b  c \right) d \right) $
 \end{itemize}
 \end{frame}
@@ -246,7 +246,7 @@ Tipps:
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Catalan Numbers}
+\begin{frame}{Catalan Nummern}
 Definition:
 \begin{align*}
 Cat \left( n \right) &= \frac{1}{n+1} \binom{2n}{n} \\
@@ -266,7 +266,7 @@ $Cat \left( n \right)$ entspricht zum Beispiel:
 
 \begin{frame}{Der Mathetest}
 \begin{block}{Aufgabe}
-Lisa macht ein Austauschsemester in Australien. Um fuer einen Mathetest zu lernen, loest sie Rechen-Aufgaben, die ihr eine Kommilitonin diktiert hat. Leider hat die Kommilitonin nicht gesagt, wie die Aufgaben geklammert sind. \\
+Lisa macht ein Austauschsemester in Australien. Um f"ur einen Mathetest zu lernen, l"ost sie Rechen-Aufgaben, die ihr eine Kommilitonin diktiert hat. Leider hat die Kommilitonin nicht gesagt, wie die Aufgaben geklammert sind. \\
 Gegeben die Anzahl an Faktoren, wie viele verschiedene Wege gibt es diese zu klammern?
 \end{block}
 L"osung:
