--- a/Mathe_1.tex
+++ b/Mathe_1.tex
@@ -234,6 +234,28 @@ Bei ICPC-Aufgaben erkennbar an:
 \end{itemize}
 \end{frame}
 
+\begin{frame}{Kombinatorik bei ICPC}
+Die L"osung f"ur eine Kombinatorik-ICPC-Aufgabe ist meist eine kurze rekursive Formel, oft in Verbindung mit Greedy oder DP. Der Aufwand liegt nicht in der Implementierung, sondern im Aufstellen der Formel.
+\begin{itemize}
+\item Kombinatorik-Aufgaben von \textbf{einer} Person bearbeiten lassen
+
+\begin{itemize}
+\item bestenfalls mit guten mathematischen Kenntnissen
+\end{itemize}
+
+\item Sobald die Formel fertig ist, L"osung coden und abgeben!
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Kombinatorik bei ICPC}
+G"anige Formeln sollte man kennen... \\
+...oder ausprobieren! \\
+
+\begin{block}{On-Line Encyclopedia of Integer Sequences}
+Unter http://oeis.org/ kann man die ersten L"osungen f"ur kleine Probleminstanzen eingeben und so pr"ufen, ob bereits eine Formel f"ur diese Folge existiert.
+\end{block}
+\end{frame}
+
 
 \begin{frame}{Aufgabe - Mauerbau}
 \begin{itemize}
@@ -271,21 +293,16 @@ Sollte man erkennen!
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Der Mathetest}
-\begin{block}{Aufgabe}
-Lisa macht ein Austauschsemester in Australien. Um f"ur einen Mathetest zu lernen, l"ost sie Rechen-Aufgaben, die ihr eine Kommilitonin diktiert hat. Leider hat die Kommilitonin nicht gesagt, wie die Aufgaben geklammert sind. \\
-Gegeben die Anzahl an Faktoren, wie viele verschiedene Wege gibt es diese zu klammern?
-\end{block}
-Beispiel:
+\begin{frame}{Aufgabe - Lieblingsschokolade}
 \begin{itemize}
-\item Gegeben: $\lbrace a, b, c, d \rbrace$
-\item Gesucht: M"oglichkeiten f"ur Klammerung
-\item $ a \left( b \left( c d \right) \right) $ , $\left( a b \right) \left( c d \right) $ , $\left( \left( a b \right) c \right) d$ , $\left( a \left( b  c \right) \right) d $ , $ a \left( \left( b  c \right) d \right) $
+\item Gegeben: Paket mit $n$ Schokoladentafeln, alle gleich verpackt
+\item Davon sind $k$ Tafeln in meiner Lieblingssorte
+\item Gesucht: Wahrscheinlichkeit, $k$ Tafeln zu nehmen und nur Lieblingsschokolade zu ziehen
 \end{itemize}
 \end{frame}
 
 \begin{frame}{Binomialkoeffizient}
-Wie viele Moeglichkeiten gibt es, $k$ Objekte aus einer Menge von $n$ verschiedenen Objekten zu ziehen?
+Wie viele M"oglichkeiten gibt es, $k$ Objekte aus einer Menge von $n$ verschiedenen Objekten zu ziehen?
 
 \begin{align*}
 C\left( n,k \right) = \binom{n}{k} = \frac{n!}{\left( n-k \right) ! \times k!}
@@ -295,20 +312,64 @@ Rekursive Definition:
 C\left( n, 0 \right) &= C\left( n,n \right) = 1 \\
 C\left( n,k \right) &= C\left( n-1,k-1 \right) + C\left( n-1,k \right)
 \end{align*} %Mglkten fuer n-te Zahl plus k-1 Zahlen kleiner n + Mglkten fuer nicht n-te Zahl, also k-1 Zahlen kleiner n
-
 \end{frame}
 
-\begin{frame}{Binomialkoeffizient}
-Tipps:
+\begin{frame}{Binomialkoeffizient - Visualisierung}
+\begin{figure}
+  \caption{Visualisierung Binomialkoeffizient\footnote{Quelle: Wikipedia}}
+  \centering
+	\includegraphics[scale=0.15]{binom.png}
+\end{figure}
+\end{frame}
+
+\begin{algorithm}
+\scriptsize 
+\caption{Binomialkoeffizient(n, k)}
+\begin{algorithmic}
+\IF {$k > n-k$}
+\STATE $k \leftarrow n-k$
+\ENDIF
+\STATE $result \leftarrow 1$
+\STATE $i \leftarrow 0$
+\WHILE {$i < k$}
+\STATE $result \leftarrow result \times \left( n - 1 \right)$
+\STATE $result \leftarrow result \div \left( i + 1 \right)$
+\STATE $i++$
+\ENDWHILE
+\STATE return $result$
+\end{algorithmic}
+\end{algorithm}
+
+\begin{frame}{Binomialkoeffizient - Implementierung}
 \begin{itemize}
-\item Meist interessieren nicht alle Werte von $C \left( n, k \right)$
+\item Naiv rekursiv
 \begin{itemize}
-\item Implementierung deshalb mit top-down
+\item $\rightarrow$ Viel zu langsam!
 \end{itemize}
-\item Fakult"at kann sehr groß werden
+\item Vorberechnen
 \begin{itemize}
-\item benutze BigInteger
-\item bei großem $k$: $C \left( n, k \right) = C \left( n, n-k \right)$
+\item Meist interessieren nicht alle Werte
+\item $\rightarrow$ Top-Down mit Zwischenspeichern
+\item Lineare Laufzeit
+\end{itemize}
+\item Mit nicht-rekursiver Formel
+\begin{itemize}
+\item Lineare Laufzeit
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+
+
+\begin{frame}{Aufgabe - Der Mathetest}
+\begin{itemize}
+\item Gegeben: Anzahl an Faktoren
+\item Gesucht: Anzahl an M"oglichkeiten, diese korrekt zu klammern
+\item Beispiel:
+\begin{itemize}
+\item Gegeben: $\lbrace a, b, c, d \rbrace$
+\item $ a \left( b \left( c d \right) \right) $ , $\left( a b \right) \left( c d \right) $ , $\left( \left( a b \right) c \right) d$ , $\left( a \left( b  c \right) \right) d $ , $ a \left( \left( b  c \right) d \right) $
+\item L"osung: 5
 \end{itemize}
 \end{itemize}
 \end{frame}
@@ -316,10 +377,15 @@ Tipps:
 \begin{frame}{Catalan Nummern}
 Definition:
 \begin{align*}
-Cat \left( n \right) &= \frac{1}{n+1} \binom{2n}{n} \\
-&= \frac{\left( 2n \right)!}{\left( n+1 \right) \times n! \times n!} = \frac{\left( 2n \right) !}{\left( n+1 \right) ! \times n!} \\
-Cat \left( n + 1 \right) &= \frac{\left( 2n + 2 \right) \times \left( 2n + 1 \right)}{\left( n + 2 \right) \times \left( n + 1 \right)} \times Cat \left( n \right)
+Cat \left( n \right) &= \frac{1}{n+1} \binom{2n}{n} 
 \end{align*}
+Rekursiv:
+\begin{align*}
+Cat \left( 0 \right) &= 1 \\
+Cat \left( n + 1 \right) &= \sum_{i=0}^n Cat \left( i \right) \times Cat \left( n - i \right)
+\end{align*}
+
+Also: 1, 1, 2, 5, 14, 42, 132, 429, ...
 \end{frame}
 
 \begin{frame}{Catalan Nummern}
@@ -328,46 +394,38 @@ $Cat \left( n \right)$ entspricht zum Beispiel:
 \item Anzahl verschiedener Bin"ar-B"aume mit $n$ Knoten
 \item Anzahl korrekter Klammerausdruecke mit $n$ Klammerpaaren
 \item Anzahl verschiedener M"oglichkeiten, $n+1$ Faktoren korrekt zu klammern
+\item Anzahl M"oglichkeiten, ein konvexes $n+2$-Eck in Dreiecke aufzuteilen
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Der Mathetest}
-\begin{block}{Aufgabe}
-Lisa macht ein Austauschsemester in Australien. Um f"ur einen Mathetest zu lernen, l"ost sie Rechen-Aufgaben, die ihr eine Kommilitonin diktiert hat. Leider hat die Kommilitonin nicht gesagt, wie die Aufgaben geklammert sind. \\
-Gegeben die Anzahl an Faktoren, wie viele verschiedene Wege gibt es diese zu klammern?
-\end{block}
-L"osung:
+\begin{algorithm}
+\scriptsize 
+\caption{Catalan(n)}
+\begin{algorithmic}
+\STATE $result = Binomialkoeffizient \left( 2 \times n , n \right)$
+\STATE return $result \div \left(n + 1 \right)$
+\end{algorithmic}
+\end{algorithm}
+
+\begin{frame}{Catalan Nummern - Implementierung}
 \begin{itemize}
-\item Sei $n$ die Anzahl an Faktoren
-\item $Cat \left( n-1 \right)$ l"ost die Aufgabe
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Zusammenfassung - Kombinatorik bei ICPC}
-Die L"osung f"ur eine Kombinatorik-ICPC-Aufgabe ist meist eine kurze rekursive Formel, oft in Verbindung mit Greedy oder DP. Der Aufwand liegt nicht in der Implementierung, sondern im Aufstellen der Formel.
+\item Naiv rekursiv
 \begin{itemize}
-\item Kombinatorik-Aufgaben von \textbf{einer} Person bearbeiten lassen
-
+\item $\rightarrow$ Viel zu langsam! 
+\end{itemize}
+\item Rekursiv mit DP
 \begin{itemize}
-\item bestenfalls mit guten mathematischen Kenntnissen
+\item $\rightarrow$ Immernoch quadratische Laufzeit!
 \end{itemize}
-
-\item Sobald die Formel fertig ist, L"osung coden und abgeben!
+\item Mit Binomialkoeffizient
+\begin{itemize}
+\item $\rightarrow$ Lineare Laufzeit!
+\end{itemize}
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Zusatz-Tipp!}
-G"anige Formeln sollte man kennen... \\
-...oder ausprobieren! \\
 
-\end{frame}
 
-\begin{frame}{Zusatz-Tipp!}
-\begin{block}{On-Line Encyclopedia of Integer Sequences}
-Unter http://oeis.org/ kann man die ersten L"osungen f"ur kleine Probleminstanzen eingeben und so pr"ufen, ob bereits eine Formel f"ur diese Folge existiert.
-\end{block}
-
-\end{frame}
 
 \section{Spieltheorie}
 \begin{frame}{Spieltheorie allgemein}
