--- a/Mathe_1.tex
+++ b/Mathe_1.tex
@@ -467,7 +467,7 @@ Schritt 2:
 \end{frame}
 
 \begin{frame}{Erstellen eines Spielbaums}
-\only<1-1>{\includegraphics[scale=0.4]{baum0.png}
+\includegraphics[scale=0.4]{baum0.png}
 \end{frame}
 
 \begin{frame}{Erstellen eines Spielbaums}
