--- a/Mathe_1.tex
+++ b/Mathe_1.tex
@@ -673,7 +673,7 @@ Falls m"oglich, anhand kleiner Teilb"aume Regel herleiten, statt direkt anzufang
 \item Mehrere Haufen mit Objekten
 \item Zwei Spieler nehmen abwechselnd von einem Haufen
 \item Wer das letzte Objekt nimmt, gewinnt
-\item F"ur wenigei Haufen mit Spielbaum modellierbar
+\item F"ur wenige Haufen mit Spielbaum modellierbar
 \item F"ur viele Haufen eigene Optimalstrategie n"otig
 \end{itemize}
 \end{frame}
